@@ -1,3 +1,6 @@
+[B]Version 0.2.2[/B]
+    * New supported filehoster: turbobit.net, ul.to, netload.in, depositfiles.com, filepost.com
+
 [B]Version 0.2.1[/B]
     * Fixed problems with the new website design
     * Ignore duplicate filehoster links
